[project]
requires-python = ">=3.9"
name = "cherryservers-sdk-python"
version = "0.1.0"

[tool.poetry]
name = "cherryservers-sdk-python"
version = "0.1.0"
description = ""
authors = ["Cherry Servers <support@cherryservers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.1"
types-requests = "^2.32.0"
mypy = "^1.12.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D211", "D213", "E501", "COM812", "ISC001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
