[tool.poetry]
name = "cherryservers_sdk_python"
version = "0.1.0"
description = ""
authors = ["Cherry Servers <support@cherryservers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"
types-requests = "^2.32.0"
mypy = "^1.12.0"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"
pytest = "^8.3.3"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D104", "D211", "D213", "E501", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
# Explicit re-exports is fine in __init__.py, still a code smell elsewhere.
"__init__.py" = ["PLC0414"]
"tests/*" = ["S101"]
# Unit tests often need to mock HTTP/S responses, which requires private member access.
"tests/unit/*" = ["SLF001"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "cherry._models.DefaultModel"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
